syntax = "proto3";

package spine.web.firebase;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.web.firebase.subscription";
option java_outer_classname = "TimedSubscriptionProto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "spine/client/subscription.proto";

// A subscription with an expiration time.
message TimedSubscription {
    option (internal_type) = true;
    option (is).java_type = "TimedSubscriptionMixin";

    // A client subscription.
    client.Subscription subscription = 1;

    // The time after which the subscription is no longer considered active.
    //
    // The initial time may be prolonged by a client request.
    //
    // As suggested by the name, the subscription is considered active unless this time is in
    // the past, i.e. it is still active at the moment of `valid_thru`.
    //
    google.protobuf.Timestamp valid_thru = 2;
}
